# segregation_of_roles

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fluent-bit.conf  pa_change.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
data/: assignments.csv  multi_assignment.csv  multi_policy.csv  no_match_assignment.csv  no_match_policy.csv  small_assignments.csv  small_assignments_error.csv  small_toxic_policies.csv  small_toxic_policies_error.csv  toxic_policies.csv
src/: config.py  logging_config.py  main.py  models.py  schemas.py
src/api/: routes.py
src/evaluation/: evaluator.py  metrics.py  run_eval.py  run_experiment.py  visualize.py
src/prompts/: prompt_manager.py  prompts.py  sod_remediation_prompt.md
src/services/: detection.py  ingestion.py  llm_service.py  policy_store.py
src/ui/: about.html  index.html  script.js  style.css
tests/: conftest.py  test_detection_engine.py  test_evaluation.py  test_ingestion_service.py  test_llm_service.py  test_prompts.py
tests/api/: test_integration_routes.py  test_status_code.py
