[project]
name = "toxic-combo-scanner"
version = "0.1.0"
description = "SoD violation detector with LLM justification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6", # Required for FastAPI file uploads
    "python-dotenv>=1.0.0", # Used by pydantic-settings # Required for AWS Bedrock
    "boto3>=1.34.0",
    # pytest>=8.4.2  <-- REMOVED. This should not be in main dependencies.
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# --- ADD THIS ENTIRE SECTION ---
[tool.pytest.ini_options]
# Tell pytest to find your code in the 'src' directory
pythonpath = ["src"]

# Tell pytest where to look for test files
testpaths = ["tests"]

