[project]
name = "toxic-combo-scanner"
version = "0.1.0"
description = "SoD violation detector with LLM justification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.15.1",      # Moved from dependencies
    "pytest-asyncio>=0.21.0",   # Kept only here (check which version you strictly need)
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=4.4.0",        # Moved from dependencies
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
